[package]
name = "temperature_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# main.rs
yew = "0.19"
log = "0.4.17"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2"
web-sys = {version="0.3.59", features=["HtmlSelectElement"]}
